--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,13 +1,11 @@
 [package]
 name = "sum-calc"
-version = "0.0.13"
+version = "0.2.0"
 edition = "2021"
 description = "A sum calc."
-repository = "https://github.com/hzqd/sum-calc-rs"
+repository = "https://github.com/hzqd/sum-calc"
 license = "MIT OR Apache-2.0"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-rayon = "1.8"
-aoko = "0.3.0-alpha.25"
